# bazel-maven-install-reproduction

./: .gitignore  MODULE.bazel  README.md  maven_install.json  renovate.json
