module(
    name = "bazel-maven-install-reproduction",
    version = "0.0.1",
)

bazel_dep(name = "rules_jvm_external", version = "6.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.guava:guava:33.4.0-jre",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2/",
    ],
)
use_repo(maven, "maven")
